Remove bogus letter 'b' for SPARC.

--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -94,7 +94,7 @@ pdp11    |    L   I       cpf m     e
 rs6000   |     Q   C    qr      d a   
 s390     |   ? Q        qr p g bd a e 
 sh       |     Q   CB   qr      dha   
-sparc    |     Q   CB   qr p   bd a   
+sparc    |     Q   CB   qr p    d a   
 stormy16 | ???L  FIC D l   p  m   at  
 v850     | ??    FI       cp gm d    s
 vax      |  M?    I       cp      a e 
