ARC does not have old-style scheduler descriptions.

--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -68,7 +68,7 @@ s       &lt;arch&gt;-elf is the correct target to use with the simulator
 Target   | HMSLQNFICBD lqrcpfgmbdhates
 ---------+----------------------------
 alpha    |  ?? Q   C    q  p g bd a e 
-arc      | ???   FI B      pf m  h    
+arc      | ???   FI B      pf m d     
 arm      |                      d a  s
 avr      |    L  FI    l  c f m       
 c4x      |  ??  N I BD       g  d  te 
