Mention GnuPG keys signing archives and add mine.  On the way, simplify the page a bit.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -8,16 +8,18 @@
 
 <h1>GCC mirror sites</h1>
 
-<p>These sites mirror the gcc.gnu.org FTP site (California, USA) directly.
-Please let us know if you are mirroring our FTP site so we can note it
-here!</p>
+<p>These sites mirror the gcc.gnu.org FTP site (California, USA)
+directly.</p>
 
 <p>Our releases are also available on the
 <a href="http://www.gnu.org/order/ftp.html">GNU FTP server and its mirror
-sites</a>.</p>
+sites</a>.  The archives there will be signed by one of the following
+GnuPG keys:</p>
 
-<p>If you want to mirror the whole GCC CVS repository, ask about 
-<a href="cvsup.html">CVSup access</a>.</p>
+<pre>
+1024D/745C015A 1999-11-09 Gerald Pfeifer <gerald@pfeifer.com>
+Key fingerprint = B215 C163 3BCA 0477 615F  1B35 A5B3 A004 745C 015A
+</pre>
 
 <ul>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a></li>
@@ -53,13 +55,15 @@ sites</a>.</p>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/gcc.gnu.org/pub/gcc/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
 <li>US (Austin, Texas): <a href="http://www.binarycode.org/gcc/">www.binarycode.org</a></li>
-
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
 name of the server, the path to the GCC mirror and the country/city
 where the mirror is located.</p>
+
+<p>If you want to mirror the whole GCC CVS repository, ask about 
+<a href="cvsup.html">CVSup access</a>.</p>
 
 </body>
 </html>
