--- a/htdocs/java/news.html
+++ b/htdocs/java/news.html
@@ -13,6 +13,97 @@
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>September 3, 2003</b>
+</td><td>
+Jeff Sturm has adapted Jan Hubicka's call graph optimization code to gcj.
+This code improves gcj's method inlining abilities with support for
+out-of-order methods and inter-class method calls, along with improved
+code size heuristics.  It is enabled by default when compiling at -O3.
+</td></tr>
+
+<tr><td valign="top">
+<b>August 4, 2003</b>
+</td><td>
+Gary Benson from Red Hat has released 
+<a href="http://people.redhat.com/gbenson/naoko/">Naoko</a>: a subset 
+of the <a href="http://sources.redhat.com/rhug/">rhug</a> packages 
+that have been repackaged for eventual inclusion in Red Hat Linux. 
+Naoko basically comprises binary RPMS of Ant, Tomcat, and their 
+dependencies built with gcj.
+</td></tr>
+
+<tr><td valign="top">
+<b>August 2, 2003</b>
+</td><td>
+Tom Tromey, Andrew Haley and others from Red Hat win the 
+<a href="http://lists.gnu.org/archive/html/classpath/2003-08/msg00004.html">
+Fast Free Eclipse Prize</a>.
+</td></tr>
+
+<tr><td valign="top">
+<b>August 1, 2003</b>
+</td><td>
+A team of hackers from Red Hat has released RPMS for a version
+of <a href="http://www.eclipse.org/">Eclipse</a>, a free software IDE
+written in Java, that has been compiled with a modified gcj.
+You can find more information
+<a href="http://sources.redhat.com/eclipse/">here</a>.  We'll be
+integrating the required gcj patches into cvs in the near future.
+</td></tr>
+
+<tr><td valign="top">
+<b>July 31, 2003</b>
+</td><td>
+Andrew Haley has checked in a major patch to the
+<a href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa branch</a>
+that allows us to convert entire functions to trees when reading
+from <code>.class</code> files.  This is an important step towards
+better high-level optimizations for Java.
+</td></tr>
+
+<tr><td valign="top">
+<b>July 30, 2003</b>
+</td><td>
+Thanks to Andreas Tobler and Jeff Sturm, libgcj is now built by
+default for Darwin.  This work is available on the cvs trunk, and
+will show up in GCJ 3.4.
+</td></tr>
+
+<tr><td valign="top">
+<b>July 28, 2003</b>
+</td><td>
+Michael Koch has announced the first (0.0.1) release of
+<a href="http://www.nongnu.org/gcjwebplugin/">gcjwebplugin</a>.
+This is a plugin to allow execution of applets in web browsers
+like Mozilla, Konqueror, and Opera.  Currently it is still a
+proof-of-concept.
+</td></tr>
+
+<tr><td valign="top">
+<b>May 14, 2003</b>
+</td><td>
+<a href="http://gcc.gnu.org/gcc-3.3/">GCC 3.3 has been released</a>.
+This release includes many bug fixes, support for <code>assert</code>,
+and JDBC 3.0 support in <code>java.sql</code>
+and <code>javax.sql</code>, among other things.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 3, 2003</b>
+</td><td>
+Jeff Sturm implemented libffi closures for SPARC so that libgcj's
+bytecode interpreter is now available on SPARC Solaris hosts.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 1, 2003</b>
+</td><td>
+The January 2003 issue of Linux Journal contains the article
+<a href="http://www.linuxjournal.com/article.php?sid=4860">
+<cite>Compiling Java with GCJ</cite></a> by Per Bothner.
+</td></tr>
+
+<tr><td valign="top">
 <b>December 27, 2002</b>
 </td><td>
 It is now possible to run the <a href="http://www.eclipse.org">Eclipse</a> IDE 
