2004-07-16  Bryce McKinlay  <mckinlay@redhat.com>
       * index.html: Add slime volleyball news item.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -82,6 +82,17 @@ and <code>javax.security.cert</code> support), we recommend
 <tr><td valign="top">
 <b>July 16, 2004</b>
 </td><td>
+AWT & Swing support continues to improve rapidly. Thomas Fitzsimmons of Red Hat
+added support for the AWT 1.0 event model, still used by many web
+applets. This means that Slime Volleyball now runs on GCJ and gcjwebplugin.
+Here's the 
+<A HREF="http://people.redhat.com/fitzsim/slime-volleyball-screenshots.html">
+evidence</A>!
+</td></tr>
+
+<tr><td valign="top">
+<b>July 16, 2004</b>
+</td><td>
 GCJ in the press! The July issue of Linux Journal
 features an article on building the Eclipse IDE to native code using GCJ:
 <A HREF="http://www.linuxjournal.com/article.php?sid=7413">
