Remove the "old scheduler description" column from backends.html, since all of them have been converted. (Yay :-)

--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -53,7 +53,6 @@ g       Port does not define TARGET_ASM_FUNCTION_(PRO|EPI)LOGUE.
 m       Port does not use define_constants.
 b       Port does not use '"* ..."' notation for output template code.
 d       Port uses DFA scheduler descriptions.
-h       Port contains old scheduler descriptions.
 a       Port generates multiple inheritance thunks using
         TARGET_ASM_OUTPUT_MI(_VCALL)_THUNK.
 t       All insns either produce exactly one assembly instruction, or
@@ -65,40 +64,40 @@ s       &lt;arch&gt;-elf is the correct target to use with the simulator
 
 <pre>
          | Characteristics
-Target   | HMSLQNFICBD lqrcpfgmbdhates
----------+----------------------------
-alpha    |  ?? Q   C    q  p g bd a e 
-arc      | ???   FI B      pf m d     
-arm      |                      d a  s
-avr      |    L  FI    l  c f m       
-c4x      |  ??  N I BD       g  d  te 
-cris     |   S   F  B     c f m   a   
-fr30     | ??    FI B        gm    t s
-frv      | ??       B      p    d a  s
-h8300    |       FI       cp g       s
-i386     |   ? Q        q  p    d a   
-i860     |  M?            cpf       e 
-ia64     |   ? Q   C    qr p    d a   
-ip2k     | ???L  FI    l  c f mb      
-iq2000   | ???   FICB      p g  d  t  
-m32r     |       FI             d    s
-m68hc11  |    L  FI    l  c        t s
-m68k     |   ?            c f     a   
-mcore    |  ?    FI          gm d    s
-mips     |     Q   CB   qr p   bd a  s
-mmix     | HM  Q   C    q  p   b  a e 
-mn10300  | ??             c  g       s
-ns32k    |  M?            c f m     e 
-pa       |   ? Q   CBD  qr    m d a e 
-pdp11    |    L   I       cpf m     e 
-rs6000   |     Q   C    qr      d a   
-s390     |   ? Q        qr p g bd a e 
-sh       |     Q   CB   qr      dha   
-sparc    |     Q   CB   qr p    d a   
-stormy16 | ???L  FIC D l   p  m   at  
-v850     | ??    FI       cp gm d    s
-vax      |  M?    I       cp      a e 
-xtensa   |   ?     C       p   bd     
+Target   | HMSLQNFICBD lqrcpfgmbdates
+---------+---------------------------
+alpha    |  ?? Q   C    q  p g bda e 
+arc      | ???   FI B      pf m d    
+arm      |                      da  s
+avr      |    L  FI    l  c f m      
+c4x      |  ??  N I BD       g  d te 
+cris     |   S   F  B     c f m  a   
+fr30     | ??    FI B        gm   t s
+frv      | ??       B      p    da  s
+h8300    |       FI       cp g      s
+i386     |   ? Q        q  p    da   
+i860     |  M?            cpf      e 
+ia64     |   ? Q   C    qr p    da   
+ip2k     | ???L  FI    l  c f mb     
+iq2000   | ???   FICB      p g  d t  
+m32r     |       FI             d   s
+m68hc11  |    L  FI    l  c       t s
+m68k     |   ?            c f    a   
+mcore    |  ?    FI          gm d   s
+mips     |     Q   CB   qr p   bda  s
+mmix     | HM  Q   C    q  p   b a e 
+mn10300  | ??             c  g      s
+ns32k    |  M?            c f m    e 
+pa       |   ? Q   CBD  qr    m da e 
+pdp11    |    L   I       cpf m    e 
+rs6000   |     Q   C    qr      da   
+s390     |   ? Q        qr p g bda e 
+sh       |     Q   CB   qr      da   
+sparc    |     Q   CB   qr p    da   
+stormy16 | ???L  FIC D l   p  m  at  
+v850     | ??    FI       cp gm d   s
+vax      |  M?    I       cp     a e 
+xtensa   |   ?     C       p   bd    
 </pre>
 
 <p>For AVR simulator, see <a
