2004-07-19  Bryce McKinlay  <mckinlay@redhat.com>
	* index.html: Replace '&' with 'and'.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -82,7 +82,7 @@ and <code>javax.security.cert</code> support), we recommend
 <tr><td valign="top">
 <b>July 16, 2004</b>
 </td><td>
-AWT & Swing support continues to improve rapidly. Thomas Fitzsimmons of Red Hat
+AWT and Swing support continues to improve rapidly. Thomas Fitzsimmons of Red Hat
 added support for the AWT 1.0 event model, still used by many web
 applets. This means that Slime Volleyball now runs on GCJ and gcjwebplugin.
 Here's the 
