--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -86,7 +86,7 @@ AWT and Swing support continues to improve rapidly. Thomas Fitzsimmons of Red Ha
 added support for the AWT 1.0 event model, still used by many web
 applets. This means that Slime Volleyball now runs on GCJ and gcjwebplugin.
 Here's the 
-<A HREF="http://people.redhat.com/fitzsim/slime-volleyball-screenshots.html">
+<a href="http://people.redhat.com/fitzsim/slime-volleyball-screenshots.html">
 evidence</A>!
 </td></tr>
 
@@ -95,7 +95,7 @@ evidence</A>!
 </td><td>
 GCJ in the press! The July issue of Linux Journal
 features an article on building the Eclipse IDE to native code using GCJ:
-<A HREF="http://www.linuxjournal.com/article.php?sid=7413">
+<a href="http://www.linuxjournal.com/article.php?sid=7413">
 Eclipse goes native</A>. The July issue of Doctor Dobbs Journal also 
 features an article (not available online) on GCJ and the Compiled Native 
 Interface (<A href="../onlinedocs/gcj/About-CNI.html">CNI</A>).
