XHTML 1.0 transitional fixes.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -87,7 +87,7 @@ added support for the AWT 1.0 event model, still used by many web
 applets. This means that Slime Volleyball now runs on GCJ and gcjwebplugin.
 Here's the 
 <a href="http://people.redhat.com/fitzsim/slime-volleyball-screenshots.html">
-evidence</A>!
+evidence</a>!
 </td></tr>
 
 <tr><td valign="top">
@@ -96,9 +96,9 @@ evidence</A>!
 GCJ in the press! The July issue of Linux Journal
 features an article on building the Eclipse IDE to native code using GCJ:
 <a href="http://www.linuxjournal.com/article.php?sid=7413">
-Eclipse goes native</A>. The July issue of Doctor Dobbs Journal also 
+Eclipse goes native</a>. The July issue of Doctor Dobbs Journal also 
 features an article (not available online) on GCJ and the Compiled Native 
-Interface (<A href="../onlinedocs/gcj/About-CNI.html">CNI</A>).
+Interface (<a href="../onlinedocs/gcj/About-CNI.html">CNI</a>).
 </td></tr>
 
 <tr><td valign="top">
