--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -26,9 +26,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Java, Ada; with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00630.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-03/msg01036.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00690.html">3.3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2003-09/msg01275.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-09/msg01275.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>
 </td>
 </tr>
@@ -72,6 +73,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00431.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00908.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00794.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00342.html">3.3.1</a>,
@@ -137,6 +139,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>arm-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00470.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01160.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00907.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00836.html">3.3.2</a>,
@@ -160,6 +163,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00532.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00433.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00905.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00805.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00751.html">3.3.2</a>,
@@ -192,6 +197,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00464.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01000.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00481.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00924.html">3.3</a>
@@ -325,6 +331,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i486-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00475.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00752.html">3.3.2</a>
 </td>
 </tr>
@@ -430,6 +437,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00425.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01308.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01243.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01036.html">3.3.3</a>,
@@ -684,7 +692,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00731.html">3.3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00382.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00382.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00372.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00863.html">3.3</a>
 </td>
@@ -704,6 +712,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>ia64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00474.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00222.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01116.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00918.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00793.html">3.3.2</a>,
@@ -789,6 +799,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mips-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00472.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00958.html">3.3.3</a>
 </td>
 </tr>
@@ -797,6 +808,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mipsel-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00434.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00906.html">3.3.3</a>
 </td>
 </tr>
@@ -813,6 +825,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>m68k-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00531.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00432.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01228.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00466.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01184.html">3.3</a>
@@ -932,6 +946,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00476.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00771.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00366.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00343.html">3.3.1</a>,
@@ -1154,6 +1169,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00471.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00904.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00837.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00464.html">3.3.1</a>,
