Bootstrap and test results for 3.4.1:
  alpha-unknown-freebsd5.2
  i386-unknown-freebsd4.9

Bootstrap for 3.4.1:

  powerpc-apple-darwin7.4.0
  powerpc-ibm-aix5.2.0.0
  sparc64-unknown-freebsd5.2
  x64_64-unknown-freebsd5.2

Test results for 3.4.1:

  hppa-unknown-linux-gnu
  hpps2.0w-hp-hpux11.00
  hppa64-hp-hpux11.00
  i386-unknown-freebsd4.10
  i486-unknown-linux-gnu
  i686-pc-cygwin
  powerpc-apple-darwin7.4.0
  powerpc-unknown-linux-gnu
  s390-ibm-linux-gnu
  sparc-sun-solaris2.8
  sparc-sun-solaris2.9
  sparc-unknown-linux-gnu
  sparc64-unknown-linux-gnu

Bootstrap for 3.4.0:

  i386-pc-solaris2.10
  powerpc-apple-darwin6.8

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -31,6 +31,17 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alpha-unknown-freebsd5.2</td>
+<td>binutils 2.15</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00425.html">3.4.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00437.html">3.4.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00368.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
 <td>alphaev56-dec-osf4.0f</td>
 <td>OSF1 V4.0</td>
 <td>Bootstrap (C, C++, F77, Obj-c):
@@ -62,9 +73,27 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>alphaev68-dec-osf5.1</td>
-<td>&nbsp;</td>
-<td>Bootstrap (C,C++,F77,Obj-C,Ada)
+<td>Tru64</td>
+<td>Bootstrap (C, C++, F77, Obj-C, Ada)
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00812.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00136.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00534.html">3.4.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00324.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00367.html">3.4.1</a>
 </td>
 </tr>
 
@@ -78,6 +107,40 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00051.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01033.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00961.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa64-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00415.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.10</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00373.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-freebsd4.9</td>
+<td>binutils 2.14</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00425.html">3.4.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00300.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-freebsd4.10</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00436.html">3.4.1</a>
 </td>
 </tr>
 
@@ -96,6 +159,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>NetBSD 2.0D</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C, Ada):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01157.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i486-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00473.html">3.4.1</a>
 </td>
 </tr>
 
@@ -129,6 +200,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00699.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00996.html">3.4.0</a>
 </td>
 </tr>
@@ -137,6 +209,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00307.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00251.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00237.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01247.html">3.4.0</a>,
@@ -244,6 +317,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin6.8</td>
+<td>Mac OS X 10.2.8</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00413.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-apple-darwin7.3.0</td>
 <td>Mac OS X 10.3</td>
 <td>Bootstrap (C, C++, Obj-C):
@@ -254,10 +335,42 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin7.4.0</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00328.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin7.4.0</td>
+<td>Mac OS X 10.3.4</td>
+<td>Bootstrap (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00720.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00865.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.2.0.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00549.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00534.html">3.4.1</a>
 </td>
 </tr>
 
@@ -282,6 +395,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>s390-ibm-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00689.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01034.html">3.4.0</a>
 </td>
 </tr>
@@ -322,6 +436,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00258.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00983.html">3.4.0</a>
 </td>
 </tr>
@@ -340,6 +455,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00567.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00218.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01240.html">3.4.0</a>
 </td>
@@ -355,9 +471,19 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc64-unknown-freebsd5.2</td>
+<td>binutils 2.15</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00425.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00345.html">3.4.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00632.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00250.html">3.4.1</a>
 </td>
 </tr>
@@ -374,11 +500,27 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>sparc64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00786.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
 <td>Aurora SPARC Linux 1.0, binutils 2.15.90, glibc 2.2.5, kernel 2.4.26</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01171.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01167.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-freebsd5.2</td>
+<td>binutils 2.15</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00425.html">3.4.1</a>
 </td>
 </tr>
 
