Document the edge-vector-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -160,6 +160,11 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <dl>
 
+  <dt>edge-vector-branch</dt>
+  <dd>This short-lived branch is for the conversion from edge lists to
+  edge vectors using the new <i>vec</i> API.  This branch is being
+  maintained by Ben Elliston.</dd>
+
   <dt><a href="projects/tree-profiling.html">tree-profiling-branch</a></dt>
   <dd>This branch is for the development of profiling heuristics
   and profile based optimizations for trees, such as profile driven inline
