Mention name changes of GCJ binaries.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -50,6 +50,22 @@
         deprecated in 3.4, has been removed.</li>
   </ul>
 
+<h3>Java</h3>
+
+  <ul>
+    <li>In order to prevent naming conflicts with other vendors implementations
+        of these tools, some GCJ binaries have been renamed:
+	<ul>
+	  <li><code>rmic</code> is now <code>grmic</code></li>
+	  <li><code>rmiregistry</code> is now <code>grmiregistry</code></li>
+	  <li><code>jar</code> is now <code>fastjar</code></li>
+	</ul>
+	In particular, these names were problematic for the jpackage.org packaging 
+	conventions which install symlinks in /usr/bin that point to the preferred 
+	versions of these tools.
+    </li>
+  </ul>
+
 <h2>New Targets and Target Specific Improvements</h2>
 
 <h3>H8/300</h3>
